interpreter-janeklang/tests/bad/02_stringint_1.janek
int main(){
    "janek" + 2137;
}